--- a/projeto/views/partials/header.ejs
+++ b/projeto/views/partials/header.ejs
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/login.css">
+    <link rel="stylesheet" href="stylesheets/home.css">
+
+
     <title>Pousada Julius</title>
 
 </head>
