Melhoramos partes do CSS e criamos rota novas.

--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: grey;
+  background-color: rgb(128, 128, 128);
 }
 
 body * {
