--- a/projeto/views/home.ejs
+++ b/projeto/views/home.ejs
@@ -3,7 +3,7 @@
 	<section class="topPage"">
 		<div class=" container">
 			<div class="areaLogo">
-				<img src="../Static/imgs/logo_cor.png" alt="logotipo">
+				<img src="/images/logo_cor.png" alt="logotipo">
 			</div>
 			<div class="areaNav">
 				<ul>
@@ -21,7 +21,7 @@
 
 	<!-- --------------------   BANNER   ------------------------------ -->
 	<section class="bannerHome">
-		<img src="../Static/imgs/banner pousada2.jpg" alt="banner">
+		<img src="/images/banner pousada2.jpg" alt="banner">
 	</section>
 
 	<!-- ---------------------   ABOUT   ------------------------------- -->
