--- a/projeto/views/login.ejs
+++ b/projeto/views/login.ejs
@@ -17,6 +17,12 @@
             </section>
             <br><br>
             <button>Entrar</button>
+            <br><br>
+            <section>
+                <a href = "/users/cadastro">
+                    <h1>Criar conta</h1>
+                </a>
+            </section>
             
 
         </form>
