--- a/projeto/views/partials/header.ejs
+++ b/projeto/views/partials/header.ejs
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="stylesheet" href="stylesheets/login.css">
-    <link rel="stylesheet" href="stylesheets/home.css">
-
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/<%= viewName %>.css">
 
     <title>Pousada Julius</title>
 
@@ -17,7 +15,7 @@
 <body>
 
     <header>
-        <img src="images/logo_cor.png" alt="logo">
+        <img src="/images/logo_cor.png" alt="logo">
         <nav>
             <ul>
                 <li>
